--- a/store/index.html
+++ b/store/index.html
@@ -67,7 +67,7 @@
 
 <section class="second-header grid">
     <div class="container grid">
-        <span class="logo"><img src="img/store-temp/logo.png" alt="logo" id="logo"></span>
+        <span class="logo"><img src="img/logo.png" alt="logo" id="logo"></span>
         <div class="numbers">
             <ul class="numbers-list">
                 <li>
@@ -207,25 +207,25 @@
 
     <div class="front-main grid">
         <h1 class="grid">Интернет-магазин одежды - Style</h1>
-        <div class="goods" style="background-image: url('img/store-temp/01.jpg');">
+        <div class="goods" style="background-image: url('img/01.jpg');">
             <span class="things">Рубашки</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/02.jpg');">
+        <div class="goods" style="background-image: url('img/02.jpg');">
             <span class="things">Пиджаки</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/03.jpg');">
+        <div class="goods" style="background-image: url('img/03.jpg');">
             <span class="things">Свитера</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/04.jpeg');">
+        <div class="goods" style="background-image: url('img/04.jpeg');">
             <span class="things">Футболки</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/06.jpg');">
+        <div class="goods" style="background-image: url('img/06.jpg');">
             <span class="things">Блузки</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/07.jpg');">
+        <div class="goods" style="background-image: url('img/07.jpg');">
             <span class="things">Кардиганы</span>
         </div>
-        <div class="goods" style="background-image: url('img/store-temp/08.jpg');">
+        <div class="goods" style="background-image: url('img/08.jpg');">
             <span class="things">Штаны</span>
         </div>
         <p class="main-text">Style - это уникальное место, в котором можно отслеживать модные
