--- a/birthday/index.html
+++ b/birthday/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <header class="header" id="header" data-vide-bg="img/video-bg.mp4">
-        
+        <div class="wrapper">
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, libero, explicabo. At modi quis, eum necessitatibus rem iste velit officiis non beatae! Illo quis repellendus similique repellat, id nam sequi.</p>
+        </div>
     </header>
     <link rel="stylesheet" href="css/birthday.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.vide.min.js"></script>
+    <script src="js/birthScript.js"></script>
 </body>
 </html>
 
