--- a/birthday/index.html
+++ b/birthday/index.html
@@ -10,7 +10,17 @@
 <body>
     <header class="header" id="header" data-vide-bg="img/video-bg.mp4">
         <div class="wrapper">
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, libero, explicabo. At modi quis, eum necessitatibus rem iste velit officiis non beatae! Illo quis repellendus similique repellat, id nam sequi.</p>
+            <p class="text">
+                Пусть в жизни будет все, что нужно:
+                Здоровье, мир, любовь и дружба.
+                Не отвернется пусть успех,
+                Удача любит больше всех.
+
+                Пусть счастье будет настоящим,
+                К мечте и радости манящим.
+                Желаю много светлых лет
+                Без боли, горестей и бед!
+            </p>
         </div>
     </header>
     <link rel="stylesheet" href="css/birthday.css">
