--- a/birthday/index.html
+++ b/birthday/index.html
@@ -8,24 +8,28 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header" id="header" data-vide-bg="img/video-bg.mp4">
-        <div class="wrapper">
-            <p class="text">
-                Пусть в жизни будет все, что нужно:
-                Здоровье, мир, любовь и дружба.
-                Не отвернется пусть успех,
-                Удача любит больше всех.
 
-                Пусть счастье будет настоящим,
-                К мечте и радости манящим.
-                Желаю много светлых лет
-                Без боли, горестей и бед!
-            </p>
-        </div>
+    <header class="header" id="header" data-vide-bg="img/video-bg.mp4">
+
     </header>
+    <div class="wrapper">
+        <p class="text">
+            Пусть в жизни будет все, что нужно:
+            Здоровье, мир, любовь и дружба.
+            Не отвернется пусть успех,
+            Удача любит больше всех.
+
+            Пусть счастье будет настоящим,
+            К мечте и радости манящим.
+            Желаю много светлых лет
+            Без боли, горестей и бед!
+        </p>
+    </div>
+    <div class="cool-btn">Нажми меня</div>
     <link rel="stylesheet" href="css/birthday.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.vide.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/birthScript.js"></script>
 </body>
 </html>
