--- a/flower landing/index.html
+++ b/flower landing/index.html
@@ -42,7 +42,7 @@
                             <div class="pop-up__display__info">
                                 <p class="pop-up__contact__par">
                                     Написать мне в: <br/>
-                                    <a href="viber://chat?number=+380976867598" class="fab fa-viber"></a>
+                                    <a href="viber://add?number=380976867598" class="fab fa-viber"></a>
                                     <a href="https://t.me/Kuzmina_Liliya" class="fab fa-telegram"></a>
                                 </p>
                             </div>
