improve response and add js

--- a/practice/index.html
+++ b/practice/index.html
@@ -199,29 +199,61 @@
             </div>
         </div>
         <div class="row img-gallery d-flex bt-offset">
-            <figure class="col-lg-3 col-md-6 remove-padding">
-                <img class="project-style" src="img/project1.jpg" alt="project1">
+            <figure class="col-lg-3 col-md-6 remove-padding project1">
+                <img class="project-style" src="img/project1.jpg" alt="project3">
+                <div class="project-desc desc1">
+                    <h6 class="project-header__text">Global Private Equity Report 2020</h6>
+                    <p class="project-header__desc">Our management consulting services focus on our clients’ most critical issues.</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
-                <img class="project-style" src="img/project2.jpg" alt="project2">
+            <figure class="col-lg-3 col-md-6 remove-padding project2">
+                <img class="project-style" src="img/project2.jpg" alt="project3">
+                <div class="project-desc desc2">
+                    <h6 class="project-header__text">Getting Started</h6>
+                    <p class="project-header__desc">We work closely with you to understand your goals and then develop your entire business plan.</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project3">
                 <img class="project-style" src="img/project3.jpg" alt="project3">
+                <div class="project-desc desc3">
+                    <h6 class="project-header__text">Reinventing the Role of Medical Affairs</h6>
+                    <p class="project-header__desc">We know how to achieve success and complete the bravest goals with minimum expenses!</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project4">
                 <img class="project-style" src="img/project4.jpg" alt="project4">
+                <div class="project-desc desc4">
+                    <h6 class="project-header__text">Winning the Race for Digital Commerce</h6>
+                    <p class="project-header__desc">We put emphasis on bringing your business to another level, on its development and positive changes.</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project5">
                 <img class="project-style" src="img/project5.jpg" alt="project5">
+                <div class="project-desc desc5">
+                    <h6 class="project-header__text">Leading consumer products companies in 2020</h6>
+                    <p class="project-header__desc">During our work we integrate principles of fair play. We turn ideas into actions, delivering qualified help to our clients.</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project6">
                 <img class="project-style" src="img/project6.jpg" alt="project6">
+                <div class="project-desc desc6">
+                    <h6 class="project-header__text">Turning Your Site Into a Sales Machine</h6>
+                    <p class="project-header__desc">Our responsibility is to provide you with the right solutions, clear and accurate calculations.</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project7">
                 <img class="project-style" src="img/project7.jpg" alt="project7">
+                <div class="project-desc desc7">
+                    <h6 class="project-header__text">The SDN Effect on Network Security</h6>
+                    <p class="project-header__desc">For enterprise organizations around the world, Software Defined Networking (SDN) is transforming the way we build</p>
+                </div>
             </figure>
-            <figure class="col-lg-3 col-md-6 remove-padding">
+            <figure class="col-lg-3 col-md-6 remove-padding project8">
                 <img class="project-style" src="img/project8.jpg" alt="project8">
+                <div class="project-desc desc8">
+                    <h6 class="project-header__text">Prioritizing Tax Benefits</h6>
+                    <p class="project-header__desc">Two kinds of clients scare me most. The first ask me as they pick up their tax return what they can do to lower their tax bill.</p>
+                </div>
             </figure>
         </div>
         <div class="row d-flex justify-content-center">
@@ -318,7 +350,7 @@
                 <ul class="price-list">
                     <li>Business Consulting</li>
                     <li>Audit & Accounting</li>
-                    <li>Marketing Plan and Strategy</li>
+                    <li>Marketing Plan</li>
                     <li>Law Assistance</li>
                 </ul>
                 <button class="price-btn">Select</button>
@@ -332,7 +364,7 @@
         <div class="row bt-offset d-flex flex-column justify-content-center">
             <div class="col-lg-12 sol-block d-flex flex-column justify-content-center">
                 <h2 class="projects-header animated rubberBand">
-                    Our Latest Projects
+                    What people say
                 </h2>
                 <hr align="left" width="170" class="animated rubberBand sol-line second-header__line" color="#000" />
             </div>
