--- a/practice/index.html
+++ b/practice/index.html
@@ -27,8 +27,8 @@
                     <li class="header-list"><a href="#">Services</a></li>
                     <li class="header-list"><a href="#">Projects</a></li>
                     <li class="header-list"><a href="#">Pracing</a></li>
+                    <li class="header-list"><a href="#">Reviews</a></li>
                     <li class="header-list"><a href="#">Contact</a></li>
-                    <li class="header-list"><a href="#">Blog</a></li>
                 </ul>
                 <div class="wrapper drop-menu ">
                     <input type="checkbox" id="check-menu">
@@ -42,8 +42,8 @@
                         <a href="#">Services</a>
                         <a href="#">Projects</a>
                         <a href="#">Pracing</a>
+                        <a href="#">Reviews</a>
                         <a href="#">Contact</a>
-                        <a href="#">Blog</a>
                     </nav>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <p class="under-header__text">
                     Big and successful experience
                 </p>
-                <hr align="left" width="170" class="header-line" color="#fff" />
+                <hr align="left" width="170" class="header-line" color="#000" />
             </div>
             <div class="col-lg-6 col-md-12 d-flex justify-content-center">
                 <img class="header-img animated slideInUp" src="img/header-table.png" alt="header-img">
@@ -420,7 +420,6 @@
     </div>
 </section>
 
-
 <section class="latest-news">
     <div class="container">
         <div class="row bt-offset ">
@@ -444,7 +443,6 @@
     </div>
 
 </section>
-
 
 <section class="forms">
     <div class="container">
@@ -481,43 +479,6 @@
 </section>
 
 <footer class="footer">
-    <div class="container">
-        <div class="row bt-offset">
-            <div class="col-lg-3 col-md-12 justify-content-md-center">
-                <h4 class="footer-menu animated bounce">Menu</h4>
-                <ul class="footer-menu__list animated slideInLeft">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-5 col-md-12">
-                <h4 class="footer-about animated bounce">About</h4>
-                <p class="footer-about__desc animated slideInLeft">
-                    Mei an pericula euripidis, hinc partem ei est. Eos ei nisl
-                    graecis, vix aperiri consequat an. Eius lorem
-                    tincidunt vix at, vel pertinax. Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit. Duis mattis eleifend lorem nec ultricies.
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-12">
-                <h6 class="post animated bounce">
-                    Resent posts
-                </h6>
-                <h6 class="resent-posts animated slideInLeft">
-                    Prioritizing Tax Benefits
-                </h6>
-                <p class="data-posts animated slideInLeft">July 5, 2019</p>
-                <h6 class="resent-posts animated slideInLeft">
-                    The SDN Effect on Network
-                </h6>
-                <p class="data-posts animated slideInLeft">July 8, 2019</p>
-            </div>
-        </div>
-    </div>
     <div class="container-fluid second-footer">
         <div class="row">
             <div class="col-lg-12 last-footer d-flex justify-content-between align-items-center">
